# thebot

./: Cargo.toml  README.md
migrations/: 20230827131946_init.sql
src/: main.rs
src/handlers/: filter.rs  mod.rs
src/types/: commands.rs  db.rs  mod.rs
src/utils/: db.rs  mod.rs  perms.rs
