[package]
name = "thebot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.26"
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.20"
pretty_env_logger = "0.5.0"
sqlx = { version = "0.7.1", features = [
    "macros",
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
] }
teloxide = { version = "0.12.2", features = ["macros", "throttle"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
